Ajout d'une image

--- a/src/app/snap-face/snap-face.component.html
+++ b/src/app/snap-face/snap-face.component.html
@@ -1,4 +1,5 @@
 <h2>{{title}}</h2>
 <p>Mis en ligne le {{createdDate}}</p>
 <p>{{description}}</p>
+<img [src] = 'imageUrl' [alt] = 'title'>
 <p>likes : {{snaps}}</p>
