--- a/src/app/snap-face/snap-face.component.html
+++ b/src/app/snap-face/snap-face.component.html
@@ -1,5 +1,7 @@
-<h2>{{title}}</h2>
-<p>Mis en ligne le {{createdDate}}</p>
-<p>{{description}}</p>
-<img [src] = 'imageUrl' [alt] = 'title'>
-<p>likes : {{snaps}}</p>
+<div class="face-snap-card">
+    <h2>{{ title }}</h2>
+    <p>Mis en ligne le {{ createdDate }}</p>
+    <img [src]="imageUrl" [alt]="title">
+    <p>{{ description }}</p>
+    <p>Likes : {{ snaps }}</p>
+  </div>
