--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-snap-face></app-snap-face>
+<app-snap-face [snapFace]="mySnap"></app-snap-face>
+<app-snap-face [snapFace]="mySnapTwo"></app-snap-face>
+<app-snap-face [snapFace]="mySnapThree"></app-snap-face>
