--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,1 @@
-<app-snap-face [snapFace]="mySnap" ></app-snap-face>
-<app-snap-face [snapFace]="mySnapTwo" *ngIf="mySnap.snaps > 0"></app-snap-face>
-<app-snap-face [snapFace]="mySnapThree"></app-snap-face>
+<app-snap-face *ngFor="let snapFaceArrayElement of snapFaces" [snapFace]="snapFaceArrayElement" ></app-snap-face>
