Ajout ngStyle pour ajouter du style
La directive  [ngStyle]  permet d'appliquer des styles qui dépendent de valeurs dynamiques, comme un texte qui, plus il y a de snaps, devient de plus en plus vert.

La directive  [ngStyle]  prend comme argument un objet où les clés correspondent aux styles CSS à modifier, et les valeurs aux valeurs que doivent prendre ces styles.

--- a/src/app/snap-face/snap-face.component.html
+++ b/src/app/snap-face/snap-face.component.html
@@ -6,5 +6,6 @@
     <p *ngIf="snapFace.location">Photo prise à {{ snapFace.location }}</p>
     <p>
         <button (click)="onAddLike()" >{{ snapFace.statusSnap }}</button>
-        Likes : {{ snapFace.snaps }}</p>
+        <span [ngStyle]="{ color: 'rgb(0, ' + snapFace.snaps + ', 0)' }">Likes : {{ snapFace.snaps }}</span>
+    </p>
   </div>
