Ajout de ngClass  pour ajouter et retirer des classes CSS selon une condition donnée

--- a/src/app/snap-face/snap-face.component.html
+++ b/src/app/snap-face/snap-face.component.html
@@ -1,4 +1,4 @@
-<div class="face-snap-card">
+<div class="face-snap-card" [ngClass]="{snapped: snapFace.statusSnap === 'Oops, un like max!'}">
     <h2>{{ snapFace.title }}</h2>
     <p>Mis en ligne le {{ snapFace.createdDate }}</p>
     <img [src]="snapFace.imageUrl" [alt]="snapFace.title">
