Date en FR avec ajout de la Locale
DatePipe permet de formater les dates, et sans configuration fournit un formatage par défaut.

DatePipe fournit des configurations prédéfinies avec des noms comme  short,  longDate  ou  mediumTime

DatePipe permet également de personnaliser totalement le format d'affichage des dates avec des chaînes de caractères qui encodent le format souhaité, par exemple  'à HH:mm, le d MMMM yyyy'

--- a/src/app/snap-face/snap-face.component.html
+++ b/src/app/snap-face/snap-face.component.html
@@ -1,6 +1,6 @@
 <div class="face-snap-card" [ngClass]="{snapped: snapFace.statusSnap === 'Oops, un like max!'}">
     <h2>{{ snapFace.title | titlecase}}</h2>
-    <p>Mis en ligne le {{ snapFace.createdDate | date: 'le dd/MM/yy à HH:mm' }}</p>
+    <p>Mis en ligne le {{ snapFace.createdDate | date: 'dd/MM/yy à HH:mm' }}</p>
     <img [src]="snapFace.imageUrl" [alt]="snapFace.title">
     <p>{{ snapFace.description }}</p>
     <p *ngIf="snapFace.location">Photo prise à {{ snapFace.location }}</p>
