--- a/src/app/snap-face/snap-face.component.html
+++ b/src/app/snap-face/snap-face.component.html
@@ -1,5 +1,5 @@
 <div class="face-snap-card" [ngClass]="{snapped: snapFace.statusSnap === 'Oops, un like max!'}">
-    <p>{{ 95654522.36666 | number: '1.0-1'}}</p>
+    <p>{{ 0.336 | percent: '1.0-1'}}</p>
     <h2>{{ snapFace.title | titlecase}}</h2>
     <p>Mis en ligne le {{ snapFace.createdDate | date: 'dd/MM/yy à HH:mm' }}</p>
     <img [src]="snapFace.imageUrl" [alt]="snapFace.title">
