Re-structuration : ajout nouveau service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,1 @@
-<app-snap-face *ngFor="let snapFaceArrayElement of snapFaces" [snapFace]="snapFaceArrayElement" ></app-snap-face>
+<app-snap-face-list></app-snap-face-list>
