--- a/src/app/snap-face-list/snap-face-list.component.html
+++ b/src/app/snap-face-list/snap-face-list.component.html
@@ -1,1 +1,1 @@
-<p>snap-face-list works!</p>
+<app-snap-face *ngFor="let snapFaceArrayElement of snapFaces" [snapFace]="snapFaceArrayElement" ></app-snap-face>
